--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ readme = "README.md"
 dependencies = [
     "dbt-core>=1.8.8",
     "dbt-materialize>=1.9.3",
+    "psycopg2>=2.9.10",
     "pulumi>=3.150.0",
     "pulumi-command>=1.0.2",
     "pulumi-docker>=4.6.1",
     "pulumi-materialize>=0.3.13",
     "pulumi-postgresql>=3.15.0",
     "setuptools>=75.8.0",
+    "sqlalchemy>=2.0.38",
 ]
